refactor(problem-5): improve CRUD server with input validation, filters, and cleaner structure

--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "dependencies": {
     "@types/express": "^5.0.3",
     "express": "^5.1.0",
+    "morgan": "^1.10.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "devDependencies": {
+    "@types/morgan": "^1.9.10"
   }
 }
